@@ -3,6 +3,7 @@ CHANGELOG
 2.1.6
 UTIL:
 * type=rule-compare | improve output to also fit for argument 'shadow-json'
+* class Address/ServiceCommon | improve text output for type=address-/service-merger
 
 BUGFIX:
 * type=service-merger | bugfix for merging objects which are overwritten but with different protocol
